versioned_docs/version-2025.2.1/professor/tiago_amaral_silva.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Tiago Amaral Silva",
  "base": "",
  "weekClasses": [
       
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [

 {
          "subject": "Educação Física I - 457",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "AGO2025"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
,
   {
          "subject": "Projeto Integrador I - 2334",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "COM2025"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
,
        {
          "subject": "Educação Física II - 2419",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero",
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2024"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
,
        {
          "subject": "Educação Física II - 2419",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero",
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2024"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }

      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física I - 2323",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero",
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
        ,   
        {
          "subject": "Educação Física I - 2323",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero",
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
,
        {
          "subject": "Educação Física I - 457",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "AGO2025"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
,

        {
          "subject": "Projeto Integrador III - 2465",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "COM2023"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
,
        {
          "subject": "Educação Física III - 1082",
          "size": 2,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "AGO2023"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }



      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Projeto Integrador I - 2334",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
        


      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [

  
    {
          "subject": "Projeto Integrador II - 2430",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "laboratorio_de_informatica_b",
          "students": [
            "COM2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }

      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física II - 615",
          "size": 2,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "AGO2024"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Tiago Amaral Silva

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
